...
            android:text="@string/_5"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
...
            android:fontFamily="@font/redhatdisplay"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap"/>

    <Button
            android:id="@+id/sortDueDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
...
            android:paddingTop="3dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortPriorityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="139dp"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/negative_button_shape"
...
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/priority"
            android:textColor="#FFFFFF"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortAZBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
...
            android:fontFamily="@font/redhatdisplay"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortAscendingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="335dp"
            android:layout_marginStart="25dp"
...
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:onClick="sortOrderSelect"
            android:text="@string/ascending"/>

    <Button
            android:id="@+id/sortDescendingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="335dp"
            android:layout_marginEnd="25dp"
...
