...
            app:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="add"
            android:onClick="onButtonPress"
            />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"/>
</RelativeLayout>


...
